# KPhotoAlbum

./: .gitignore
HTMLGenerator/: Generator.cpp  Generator.h  HTMLDialog.cpp  HTMLDialog.h  Setup.cpp  Setup.h
themes/: CMakeLists.txt
themes/blue/: imagepage.html  kphotoalbum.theme
themes/dark/: imagepage.html  kphotoalbum.theme
themes/darkJS/: imagepage.html  kphotoalbum.theme
themes/grey/: kphotoalbum.theme
themes/js_export/: CMakeLists.txt  LICENCE  index.html  kphotoalbum.theme  lightFullscreenGallery.js  photos.js  style_img.css  style_js.css  tagGallery.js  tagGalleryView.js  test.txt
themes/picBelow/: imagepage.html  kphotoalbum.theme
themes/rounded/: imagepage.html  kphotoalbum.theme
