install(
    FILES
    close.png
    close.svg
    CMakeLists.txt
    imagepage.html
    index.html
    kphotoalbum.theme
    lightFullscreenGallery.js
    mainpage.html
    mustache.js
    style_img.css
    style_js.css
    tagGallery.js
    tagGalleryView.js
    DESTINATION ${KDE_INSTALL_DATADIR}/kphotoalbum/themes/js_export
    )

# vi:expandtab:tabstop=4 shiftwidth=4:
