install(
    FILES
    close.png
    close.svg
    CMakeLists.txt
    index.html
    kphotoalbum.theme
    lightFullscreenGallery.js
    mustache.js
    photos.js
    style_img.css
    style_js.css
    tagGallery.js
    tagGalleryView.js
    LICENCE
    DESTINATION ${KDE_INSTALL_DATADIR}/kphotoalbum/themes/js_export
    )

# vi:expandtab:tabstop=4 shiftwidth=4:
